app/assets/stylesheets/bootstrap_and_overrides.css.less
/* ... */
.icons {
  float: left;
}
.user-actions {
  float: right;
}
/***********************************************************************************************/
/* Flash Notifications */
/***********************************************************************************************/
.alert {
  display: none;
  padding: 10px 0;
  border-radius: 0px;
  text-align: center;
  width: 80%;
  margin-left: 10%;
  i {
    position: relative;
    top: 3px;
    color: #58C14A;
    font-size: 20px;
    padding-right: 7px;
  }
  em {
    position: relative;
  }
  .close {
    display: none;
  }
}

.alert-danger, .alert-error, .alert-success {
  font-weight: 700;
  font-size: 15px;
  background-color: white;
}

.reports-index {
  .alert {
    position: absolute;
    top: 85px;
    width: 99.8%;
    left: 0;
  }
}

/***********************************************************************************************/
/* Footer */
/***********************************************************************************************/
.footer {
  padding: 15px 0;
  background: @client-vcmi-footerColor;
  width: 100%;
  position: absolute;
  .copyright {
    margin-left: 42px;
    color: @client-vcmi-footerTextColor;
    font-size: 11px;
  }
}

/***********************************************************************************************/
/* Cards */
/***********************************************************************************************/
.client-cards {
  background: white;
  margin-top: 30px;
  border-radius: 10px;
  border-bottom: 2px solid #DCDCDC;
  border-right: 2px solid #DCDCDC;

  h2 {
    font-size: 24px;
    margin-left: 20px;
    color: #242529;
    margin-bottom: 3px;
    .icon-edit {
      color: #111111;
      float: right;
      margin-right: 8px;
      font-size: 20px;
      margin-top: 12px;
    }
    .icon-remove {
      color: @client-vcmi-brandOrange;
      float: right;
      margin-right: 15px;
      font-size: 20px;
      margin-top: 12px;
    }
  }
  p {
    margin: 0 0 10px;
    margin-left: 20px;
    color: #979797;
    font-weight: 400;
    margin-bottom: 30px;
  }
  .client-logo {
    width: 100px;
    height: 100px;
    float: right;
    border: 3px solid rgba(0, 0, 0, 0.1);
  }
  .client-operations {
    border-right: 2px solid #DCDCDC;
    border-radius: 0 0 10px 10px;
    border-top: 1px solid rgba(0,0,0,0.1);
    padding: 10px 0px;
    .icons {
      margin-left: 20px;
      span {
        a {
          i {
            color: #3E4347;
            font-size: 14px;
            margin-right: 10px;
          }
        }
      }
    }
  }
}

/***********************************************************************************************/
/* Table */
/***********************************************************************************************/
.client-table {
  // box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0.2), inset 0 0 0px rgba(0, 0, 0, 0.1);
  width: 900px;
  margin: 0 auto;
  margin-top: 30px;
  tr {
    background: white;
  }
  thead {
    th {
      padding: 20px 20px;
      font-size: 18px;
      font-weight: 900;
    }
  }
  tbody {
    tr {
      td {
        padding: 20px 20px;
        border: none;
        vertical-align: middle;
        &:nth-child(1) {
          font-weight: 700;
          font-size: 16px;
          text-overflow: ellipsis;
          overflow: hidden;
          min-width: 250px;
        }
      }
      .icon-remove {
        color: @client-vcmi-brandOrange;
        font-size: 16px;
        position: relative;
        top: 2px;
      }
      .icon-edit {
        color: #40464A;
        position: relative;
        top: 1px;
        margin-right: 7px;
        font-size: 15px;
        position: relative;
        top: 2px;
      }
      .icon-unlock {
        color: #40464A;
        font-size: 15px;
        margin-right: 12px;
        position: relative;
        top: 2px;
      }
    }
    > tr:nth-child(odd) > td, > tr:nth-child(odd) > th {
      background: #F7F7F7;
    }
  }
}

.pagination-container {
  width: 785px;
  margin: 0 auto;
  .pagination {
    float: right;
  }
}
/* ... */

